yaml/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: author
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      name: author
  template:
    metadata:
      labels:
        name: author
    spec:
      containers:
      - name: author
        image: docker.io/freegroup/thindexed-author:0.1.0-26
