yaml/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: author
  namespace: default
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    name: author
