yaml/istio-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: author
  namespace: default
spec:
  hosts: ["<DOMAIN>"]
  gateways: [ "gateway-app" ]
  http:
    - match:
      - uri:
          exact: "/author"
      redirect:
        uri: "/author/"
    - match:
      - uri:
          prefix: "/author/"
      rewrite:
        uri: "/"
      route:
        - destination:
            host: author
